# fs9

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  Progress.md  README.md  docker-compose.yml  env.example  fs9.example.yaml  fs9.yaml  quickstart.sh  test-fuse.sh  test.sh
.github/workflows/: ci.yml  release-sh9.yml
cli/: Cargo.toml
cli/src/: config.rs  jwt.rs  main.rs
clients/python/: README.md  pyproject.toml
clients/python/fs9_client/: __init__.py  client.py  errors.py  types.py
clients/python/tests/: test_client.py  test_e2e.py  test_types.py
clients/rust/: Cargo.toml
clients/rust/src/: client.rs  error.rs  lib.rs  types.rs
clients/rust/tests/: integration.rs
config/: Cargo.toml
config/src/: error.rs  lib.rs  loader.rs  types.rs
core/: AGENTS.md  Cargo.toml
core/src/: handle.rs  lib.rs  mount.rs  plugin.rs  vfs.rs
core/src/providers/: localfs.rs  memfs.rs  mod.rs  proxyfs.rs  registry.rs
core/src/providers/localfs/: mod.rs
core/src/providers/memfs/: mod.rs
core/src/providers/proxyfs/: mod.rs
core/src/providers/streamfs/: README.md  mod.rs
demo/: hellofs_plugin_demo.sh  realtime_stream_demo.sh  streamfs_demo.sh
docker/: Dockerfile.meta-rust  Dockerfile.server  Dockerfile.server-e2e  Dockerfile.server-tikv  README.md
docs/: PUBSUBFS_QUICKSTART.md  PUBSUBFS_QUICKSTART_V2.md  PUBSUB_DESIGN.md  SH9_TAIL_USAGE.md
docs/deployment/: sticky-session.md
fuse/: AGENTS.md  Cargo.toml
fuse/src/: builder.rs  fs.rs  handle.rs  inode.rs  lib.rs  main.rs
fuse/tests/: integration.rs  integration_bash.rs  integration_git.rs
fuse/tests/common/: mod.rs
meta/: Cargo.toml  main.py  requirements.txt
meta/src/: auth.rs  error.rs  lib.rs  main.rs
meta/src/api/: apikey.rs  mod.rs  mount.rs  namespace.rs  token.rs  user.rs
meta/src/db/: mod.rs  models.rs  postgres.rs  sqlite.rs
meta/tests/: api_test.rs
plugins/: AGENTS.md  HOW_TO_BUILD_A_FILESYSTEM.md
plugins/hellofs/: Cargo.toml
plugins/hellofs/src/: lib.rs
plugins/kv/: Cargo.toml
plugins/kv/src/: lib.rs
plugins/pagefs/: Cargo.toml
plugins/pagefs/src/: ffi.rs  lib.rs  provider.rs  tests.rs
plugins/pagefs/tests/: tikv_integration.rs
plugins/pubsubfs/: Cargo.toml  README.md  USAGE.md
plugins/pubsubfs/src/: ffi.rs  lib.rs  tests.rs
plugins/s3/: Cargo.toml
plugins/s3/src/: lib.rs
plugins/streamfs/: Cargo.toml
plugins/streamfs/src/: lib.rs
scripts/: fs9-tenant.sh  test-million-scale.sh
scripts/multitenant-demo/: 01-start-server.sh  02-setup-tenants.sh  03-tenant-demo.sh  04-verify-isolation.sh  run-all.sh
scripts/multitenant-demo/lib/: jwt.sh
sdk/: Cargo.toml  README.md
sdk-ffi/: Cargo.toml
sdk-ffi/src/: lib.rs
sdk/src/: capabilities.rs  error.rs  lib.rs  provider.rs  types.rs
server/: Cargo.toml
server/src/: audit.rs  auth.rs  circuit_breaker.rs  db9_client.rs  lib.rs  main.rs  meta_client.rs  metrics.rs  namespace.rs  rate_limit.rs  state.rs  token_cache.rs  token_revocation.rs  tracing_otel.rs
server/src/api/: handlers.rs  mod.rs  models.rs
server/tests/: contract.rs  harness.rs  multitenant.rs
sh9/: AGENTS.md  Cargo.toml
sh9/examples/: embed.rs
sh9/src/: ast.rs  completer.rs  error.rs  eval.rs  help.rs  lexer.rs  lib.rs  main.rs  parser.rs  shell.rs
sh9/src/eval/: arithmetic.rs  builtins_fs.rs  builtins_shell.rs  builtins_text.rs  control_flow.rs  expansion.rs  local_fs.rs  mod.rs  namespace.rs  router.rs  utils.rs
sh9/tests/: integration_tests.rs
sh9/tests/integration/scripts/: 01_parsing.out  01_parsing.sh9  02_variables.out  02_variables.sh9  03_arithmetic.out  03_arithmetic.sh9  04_pipelines.out  04_pipelines.sh9  05_redirection.out  05_redirection.sh9  06_if_else.out  06_if_else.sh9  07_loops.out  07_loops.sh9  08_functions.out  08_functions.sh9  09_recursion.out  09_recursion.sh9  10_fs_ops.out  10_fs_ops.sh9  11_http.out  11_http.sh9  12_jobs.out  12_jobs.sh9  13_llm.out  13_llm.sh9  14_comments.out  14_comments.sh9  15_backticks.out  15_backticks.sh9  16_path_utils.out  16_path_utils.sh9  17_text_processing.out  17_text_processing.sh9  18_env.out  18_env.sh9  19_glob.out  19_glob.sh9  20_stderr.out  20_stderr.sh9  (+78 more)
tasks/: prd-fs9-table-function-and-ai-memory.md
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: e2e.rs
