[package]
name = "fs9-config"
description = "FS9 Configuration - Unified YAML configuration system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
tracing.workspace = true
dirs = "5.0"
shellexpand = "3.1"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
