[package]
name = "fs9-server"
description = "FS9 Server - HTTP REST API server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fs9-sdk = { path = "../sdk", features = ["serde"] }
fs9-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true

[lints]
workspace = true
