[package]
name = "fs9-server"
description = "FS9 Server - HTTP REST API server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fs9-sdk = { path = "../sdk", features = ["serde"] }
fs9-core = { path = "../core" }
fs9-config = { path = "../config" }
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
reqwest = { workspace = true, features = ["json"] }
once_cell = "1.19"
base64 = "0.22"

[[test]]
name = "contract"
path = "tests/contract.rs"

[lints]
workspace = true
