[package]
name = "fs9-tests"
description = "FS9 End-to-end integration tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
fs9-client = { path = "../clients/rust" }
tokio.workspace = true
reqwest = { workspace = true, features = ["json", "blocking"] }
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile = "3"
rand = "0.8"
once_cell = "1.19"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "time"] }

[lints]
workspace = true
