[package]
name = "fs9-client"
description = "FS9 Client SDK - HTTP client for FS9 distributed filesystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "stream"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-core = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
