[package]
name = "fs9-plugin-pagefs"
description = "FS9 Plugin - Page-based filesystem backed by KV store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config"]
tikv = ["tikv-client", "reqwest"]

[dependencies]
fs9-sdk = { path = "../../sdk" }
fs9-sdk-ffi = { path = "../../sdk-ffi" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
libc = "0.2"
aws-sdk-s3 = { version = "1.65", optional = true }
aws-config = { version = "1.5", optional = true }
tikv-client = { git = "https://github.com/tikv/client-rust.git", branch = "master", optional = true }
reqwest = { workspace = true, optional = true, features = ["rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
